gcc/testsuite/rust/rustc/ui/keyword/keyword-super.rs
fn main() {
    let super: isize; // { dg-error ".E0433." "" { target *-*-* } }
}

